testcases/valid/for/forCount.wacc
# simple counting while loop

# Program:

begin
  println "Can you count to 10?" ;
  int j = 1;
  for (int i = 1; i <= 10; i++) do
    j *= 2;
    println i;
    println j
  done
end