testcases/invalid/semanticErr/for/forCountErr.wacc
# simple counting while loop

# Output:
# Can you count to 10?
# 1
# 2
# 3
# 4
# 5
# 6
# 7
# 8
# 9
# 10

# Program:

begin
  println "Can you count to 10?" ;
  for (int i = 1; i <= true; i = i + 1) do
    println i
  done
end